tests/resource/valid/definition/bytes.mamba
def x: Bytes := Bytes(20)
def y: Bytes := Bytes("my_string", encoding="ascii")
