tests/resource/invalid/type/call/calls_wrong_primitive.mamba
def fun_b(x: Int) => print("a")

fun_b("asdf")
